@@ -1,4 +1,5 @@
 package com.backend.chat;
+import com.backend.exception.ResourceNotFoundException;
 import com.backend.message.Message;
 import com.backend.message.MessageRepository;
 import com.backend.user.BaseUserRepository;
@@ -6,6 +7,7 @@ import com.backend.user.User;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,6 +22,22 @@ public class ChatService {
 
     @Autowired
     private MessageRepository messageRepository;
+
+    private ChatDTO convertToDTO(Chat chat) {
+        return new ChatDTO(
+            chat.getId(),
+            chat.getParticipants().stream().map(User::getId).toList(),
+            chat.getMessages().stream().map(Message::getId).toList()
+        );
+    }
+
+    private Chat convertToEntity(ChatDTO dto) {
+        return new Chat(
+                dto.getId(),
+                userRepository.findAllById(dto.getPatricipantsIds()),
+                messageRepository.findAllById(dto.getMessageIds())
+        );
+    }
 
     public ChatDTO getChatById(Integer id) {
         Chat chat = chatRepository.findById(id).orElseThrow(() -> new RuntimeException("Chat not found"));
@@ -36,12 +54,34 @@ public class ChatService {
         List<User> participants = userRepository.findAllById(participantIds);
         Chat chat = new Chat();
         chat.setParticipants(participants);
-        Chat savedChat = chatRepository.save(chat);
 
-        List<Integer> messageIds = savedChat.getMessages().stream()
-                .map(Message::getId)
-                .collect(Collectors.toList());
-        return new ChatDTO(savedChat.getId(), participantIds, messageIds);
+        List<Message> messageIds = new ArrayList<>();
+        chat.setMessages(messageIds);
+
+        return convertToDTO( chatRepository.save(chat));
+
+    }
+
+    public List<ChatDTO> getAllChats() {
+        return chatRepository.findAll().stream().map(this::convertToDTO).toList();
+    }
+
+    public ChatDTO updateChat(Integer id, ChatDTO chatDTO) {
+        Chat chat = chatRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("no chat with id: "+id));
+        chat.setParticipants(userRepository.findAllById(chatDTO.getPatricipantsIds()));
+        chat.setMessages(messageRepository.findAllById(chatDTO.getMessageIds()));
+        return convertToDTO( chatRepository.save(chat));
+    }
+
+    public boolean deleteChat(Integer id) {
+        boolean existed = chatRepository.findById(id).isPresent();
+        if (existed)
+            chatRepository.deleteById(id);
+        return existed;
+    }
+
+    public ChatDTO createChat(ChatDTO chatDTO) {
+        return convertToDTO(chatRepository.save(convertToEntity(chatDTO)));
     }
 }
 
